Changes for 1.8.1

 - [ZBX-1523] fixed last macros deletion (Vedmak)
 - [ZBX-1619] fixed web scenario data not removed from DB when host is deleted (Vedmak)
 - [ZBX-1567] fixed availability graph text displaying (Vedmak)
 - [ZBX-1581] fixed wrong group saved as discovery group in Administration->General (Vedmak)
 - [ZBX-1592] user groups are now sorted in user list and editing form (Vedmak)
 - [ZBX-1475] improved elements status checks (Aly)
 - [ZBX-1598] fixed empty application list when mass update template items (Vedmak)
 - [ZBX-1612] fixed "API access" and "Disabled" group permissions; patch by Kodai (Richlv)
 - [ZBX-1606] fixed showing icon errors with qoutes in error text (Vedmak)
 - [ZBX-1571] fixed errors when adding proxy (Vedmak)
 - [ZBX-1585] fixed editing time in calendar popup in ie6/7 (Vedmak)
 - [ZBX-1564] fixed processing of performance counters which are represented as number alternatives (Dmitry)
 - [ZBX-479] fixed compilation of Zabbix agent under Mac OS/X (Sasha)
 - [ZBX-1385] proxy list in host configuration form is now sorted (Vedmak)
 - [ZBX-1560] fixed typo in application API class call (Vedmak)
 - [ZBX-1286] Zabbix handles some specified types of errors instead of Windows system, no dialogue boxes pop up (Dmitry)
 - [ZBX-1420] fixed warnings in Dashboard and on script execution if Zabbix server is down (Alexei)
 - [ZBX-1584] fixed importing/exporting of IPMI settings (Vedmak)
 - [ZBX-1554] fixed errors when saving triggers using "Create log trigger" (Vedmak)
 - [ZBX-1530] fixed showing graph from wrong host, when simple graph with dynamic option is clicked on screen (Vedmak)
 - [ZBX-1545] fixed showing templated graphs in graph selection combobox (Vedmak)
 - [ZBX-1465] fixed adding hostgroup elements on map (Aly)
 - [ZBX-1528] fixed map permissions (Aly)
 - [ZBX-1569] fix incorrect state reference in map connector definition (Richlv)
 - [ZBX-1568] make 'Parent service' string translatable; patch by Kodai (Richlv)